First implement of chip cycle, and reorganizations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,6 @@ set(src_folder "src/")
 
 project(${project_name})
 
-
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src_asm DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/tests_src DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 add_executable(${project_name} main.c ${src_folder}4004_chip.c ${src_folder}utils.c)
