FIX some things. Not compleat of ok

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,10 @@ else()
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -std=c99")
 endif()
 
-file(GLOB PROJECT_SOURCES ${src_folder}/*.c)
-file(GLOB PROJECT_HEADERS ${src_folder}/*.h)
-
+file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS ${src_folder}/*.c)
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/roms DESTINATION ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
 
-add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS})
+add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
