ADD a_token unit test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,5 +12,11 @@ target_include_directories(options_parser PRIVATE ../src)
 
 add_test(NAME options_parser COMMAND options_parser)
 
+add_executable(a_token ./a_token/test_runner.c ../src/a_token.c)
+target_link_libraries(a_token unity)
+target_include_directories(a_token PRIVATE ../src)
+
+add_test(NAME a_token COMMAND a_token)
+
 file(COPY ${CMAKE_SOURCE_DIR}/roms DESTINATION ${CMAKE_BINARY_DIR}/test)
 
