--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -18,7 +18,7 @@ target_include_directories(a_token PRIVATE ../src)
 
 add_test(NAME a_token COMMAND a_token)
 
-add_executable(assembler ./assembler/test_runner.c ../src/assembler.c ../src/options_parser.c ../src/a_scanner.c ../src/files.c ../src/a_token.c)
+add_executable(assembler ./assembler/test_runner.c ../src/assembler.c ../src/options_parser.c ../src/a_scanner.c ../src/files.c ../src/a_token.c ../src/a_hash_table.c)
 target_link_libraries(assembler unity)
 target_include_directories(assembler PRIVATE ../src)
 
